--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,15 +19,15 @@
     <title>MausamMate - Live Weather Updates</title>
     <meta name="description" content="MausamMate - Get live weather forecasts, AQI, sunrise & sunset, rain chance, and air quality updates in real time.">
     <meta name="keywords" content="weather, mausam, forecast, AQI, temperature, rain, weather app, MausamMate">
-    <meta name="author" content="Your Name">
+    <meta name="author" content="Aman Singh | Kirti Yadav">
     <meta name="robots" content="index, follow">
 
     <!-- Open Graph (Facebook/LinkedIn) -->
     <meta property="og:title" content="MausamMate - Live Weather Updates">
     <meta property="og:description" content="Get real-time weather reports, AQI, UV index, and more.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://your-domain.com">
-    <meta property="og:image" content="/preview-image.png">
+    <meta property="og:url" content="https://mausam-mate-2734.vercel.app/">
+    <meta property="og:image" content="/preview-image">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
